--- a/pandora-wedding-planner/project.json
+++ b/pandora-wedding-planner/project.json
@@ -8,7 +8,7 @@
         "javascript",
         "tailwindcss"
     ],
-    "demo_url": null,
+    "demo_url": "https://demo.spinotek.com/pandora-wedding-planner/",
     "repo_url": null,
     "added_at": "2026-02-23"
 }
