--- a/projects.json
+++ b/projects.json
@@ -6,7 +6,8 @@
         "category": "Web App",
         "status": "COMPLETED",
         "tech": [
-            "javascript",
+            "html",
+            "css",
             "tailwindcss"
         ],
         "icon": "",
