--- a/lpk-talenta/project.json
+++ b/lpk-talenta/project.json
@@ -1,7 +1,7 @@
 {
     "name": "LPK Talenta",
     "description": "LPK Talenta adalah platform yang membantu pasangan merencanakan pernikahan mereka.",
-    "icon": "rocket",
+    "icon": "https://talentaacademy.id/wp-content/uploads/2023/04/WhatsApp-Image-2023-04-02-at-09.53.42.jpeg",
     "category": "Web App",
     "status": "COMPLETED",
     "tech": [
