--- a/projects.json
+++ b/projects.json
@@ -9,7 +9,7 @@
       "javascript",
       "tailwindcss"
     ],
-    "icon": "rocket",
+    "icon": "https://talentaacademy.id/wp-content/uploads/2023/04/WhatsApp-Image-2023-04-02-at-09.53.42.jpeg",
     "demo_url": "https://demo.spinotek.com/lpk-talenta",
     "repo_url": null,
     "image": "https://raw.githubusercontent.com/Spinotek-Organization/prototype-spinotek/main/lpk-talenta/card.png",
@@ -25,7 +25,7 @@
       "javascript",
       "tailwindcss"
     ],
-    "icon": "rocket",
+    "icon": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReM2Jpgqb3HMEKbGWHSd38PIGGSw6dlRIMbg&s",
     "demo_url": "https://demo.spinotek.com/pandora-wedding-planner/",
     "repo_url": null,
     "image": "https://raw.githubusercontent.com/Spinotek-Organization/prototype-spinotek/main/pandora-wedding-planner/card.png",
